--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ about:
 
 ---
 
-I am a data scientist, currently working at Ebiquity plc. 
+I am currently working as an AI engineer at Minsait. 
 My primary interests are programming, cloud architecture, statistics and artificial intelligence. 
 
 Please do get in touch if you want to propose a project or discuss any ideas.
